--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,10 +1,14 @@
 * {
     font-family: Helvetica, Arial, sans-serif;
-    background-color: rgb(234, 234, 234);
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    color: white;
   }
   
   body {
-    padding: 60px;
+    background-color: rgb(0 0 0 / 86%);
+    padding: 20px;
   }
   
   input {
@@ -18,38 +22,46 @@
     width: 100%;
   }
   
-  h2 {
-    font-size: 1.5rem;
+  h1{
+    text-align: center;
+    margin-bottom: 10px;
   }
-  
-  h3 {
-    font-size: 3rem;
-    margin-bottom: 5px;
+
+  h3{
+    margin: 0 auto 10px;
+    text-align: center;
+    width: 80%;
   }
-  
+
+  form{
+    margin: 0 auto 20px;
+    width: 80%;
+  }
+
   .card-grid {
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
+    width: 80%;
+    margin: 0 auto;
   }
   
   .card {
+    display: flex;
+    flex-direction: column;
     align-content: center;
     align-items: center;
     background-color: white;
     border-radius: 10px;
-    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.03);
-    display: flex;
-    flex-direction: column;
-    height: 0%;  
+    box-shadow: 0px 3px 5px rgb(255 255 255 / 3%);
+    width: 30%;
     justify-content: center;
     margin-bottom: 20px;
-    margin-right: 20px;
     overflow: hidden;
   }
   
   .card p {
+    color: black;
     background-color: white;
     flex: 1;
     font-size: 1.5rem;
@@ -60,4 +72,11 @@
   
   .card img {
     width: 100%;
+  }
+
+  @media only screen and (max-width: 600px) {
+   
+    .card {
+      width: 40%;
+    }
   }
